[package]
name = "dwmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3.29"}
tokio = {version = "1.35.0", features = ["full"]}
indicatif = { version = "0.17.7"}
reqwest = { version = "0.11.22", features = ["blocking", "stream"]}
url = { version = "2.5.0" }